@@ -1,3 +1,10 @@
+2019-05-10  Mark Wielaard  <mark@klomp.org>
+
+	* readelf.c (struct attrcb_args): Rename die to dies.
+	(attr_callback): Get current current die using dies[level].
+	Handle DW_AT_discr_list as block, not as constant.
+	(print_debug_units): pass dies, not dies[level] as args.
+
 2019-05-09  Mark Wielaard  <mark@klomp.org>
 
 	* readelf.c (cleanup_list): New function.
